# pong

./: CMakeLists.txt  README.md  build.bat
include/: ball.hpp  config.h.in  config.hpp  config.hpp.in  constants.hpp  paddle.hpp  score.hpp
src/: ball.cpp  main.cpp  paddle.cpp  score.cpp
